Fix horizontal rule spacing in mobile nav

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -901,6 +901,16 @@ body.dark {
 
 /* Mobile */
 @media (max-width: 480px) {
+	.mobileNav{
+		.horizontal-rule {
+			margin: 3rem 0;
+		}
+	
+		.horizontal-rule:nth-of-type(2) {
+			margin: 3rem 0;
+		}
+	}
+	
 	/* Navbar */
 	.nav__icon--dot {
 		height: 8px;
